# dummy-model

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: main.yml
src/: hello.f90
